| Summary: | ASTERISK-26444: 'features show' command in CLI does not return prompt. | ||
| Reporter: | John Kiniston (johnkiniston) | Labels: | |
| Date Opened: | 2016-10-05 16:42:29 | Date Closed: | 2016-10-20 10:08:34 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Channels/chan_pjsip Features |
| Versions: | 13.11.2 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Debian 8.6 Linux Kiniston-Asterisk13-Dev 3.16.0-4-686-pae #1 SMP Debian 3.16.36-1+deb8u1 (2016-09-03) i686 GNU/Linux | Attachments: | ( 0) ASTERISK-26444.diff |
| Description: | Typing features show on the CLI does not return you to the CLI prompt like other commands do.
Kiniston-Asterisk13-Dev*CLI> features show Builtin Feature Default Current --------------- ------- ------- Pickup *8 *8 Blind Transfer # *0 Attended Transfer One Touch Monitor #73 Disconnect Call * * Park Call #72 One Touch MixMonitor #74 Dynamic Feature Default Current --------------- ------- ------- (none) Feature Groups: --------------- (none) If you hit Return or a message is output on the console the prompt returns. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2016-10-05 16:42:29.839-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: snuffy (snuffy) 2016-10-12 02:44:07.329-0500 Hmm.. Issue is the last line of features_config.c at approx line 1952 {code:java} ast_cli(a->fd, "\n"); {code} This can be removed and then the prompt returns as expected. The print_featuregroups func already newlines its contents so the additional only \n which causes the hang is unnecessary. | ||