features_config: Fix issue with CLI not returning after "features show"

Extra call to ast_cli() with only a "\n" meant that user had to press
enter to return to prompt. Fix by removing unneeded call.

ASTERISK-26444 #close

Change-Id: I91d645b7e6e5dba35f8c410df2be77a8c0e3acb8